snapshot-tests/tests/snapshots/parser__newline_literal.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[UnterminatedString]: invalid literal string, expected `'` at a
  ┌─ newline_literal:1:6
  │
1 │ a = '
  │      ^ expected `'`
